# Network_GroupDetection

./: parser_plotly_four_dash_CondensedTopics.ipynb  pipelineTest.ipynb  setup.cfg
playground/: parser_plotly_four_dash_CondensedTopics.ipynb  pipelineTest.ipynb  tests.ipynb
src/network_generator/: user_interface.py
tests/: network_data_tests.pyi
tests/network_tests/: test_outlook_obect_test.py
