[metadata]
name = Email_NetworkGraphGeneratord
version = 1.0.1
author = Ben Goldweber
description = Dist to generate network graphs, with assigned topics, from your standard office tools
long_description = Tool, which when run on your personal work suite, generates insights that help you make decisions
keywords = NetworkGraph, TopicClassification, Insights
[options]
python_requires = >=3.7, <4
[options.extras_require]
test =
    pytest
    coverage
[options.package_data]
sample =
    example_data.csv'